src/test/ui/generator/generator-region-requirements.nll.stderr
error: lifetime may not live long enough
  --> $DIR/generator-region-requirements.rs:13:51
   |
LL | fn dangle(x: &mut i32) -> &'static mut i32 {
   |              - let's call the lifetime of this reference `'1`
...
LL |             GeneratorState::Complete(c) => return c,
   |                                                   ^ returning this value requires that `'1` must outlive `'static`

error: aborting due to previous error

